test/good/curry/parens.paka
def add(x)(y) {
    x + y
};

add(1)(2) |> io.print;