test/bad/parse/if.paka
if (0) {
    if (1) {
        if (2) {
            
        }
    }    
}